Closed Bug 205728 Opened 21 years ago Closed 21 years ago

Crash in [@nsMenuPopupFrame::Notify]

Categories

(Core :: XUL, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Bienvenu, Assigned: bryner)

Details

(Keywords: topcrash)

Crash Data

Attachments

(1 file)

this is a topcrash - we're crashing here because mCloseTimer is null:

      mCloseTimer->Cancel(); <-------
  }
  
  mCloseTimer = nsnull;


adding a null check fixes this. The reproducible case I've found is to click on
the mailnews view menu in the thread pane and mouse around for a bit, until you
crash.
Attached patch proposed fixSplinter Review
a null check handles this - I don't know who's code this is, and who can decide
if there's a better fix. But we should fix this before 1.4b, since it's a
trivial fix for a top crash.
Status: NEW → ASSIGNED
Keywords: topcrash
Summary: Crash in nsMenuPopupFrame::Notify → Crash in [@nsMenuPopupFrame::Notify]
cc'ing folks who've changed this file recently, and might have a clue. also
cc'ing bryner since Seth says he made some event changes recently which
conceivably might affect this code.
Flags: blocking1.4?
.
Status: ASSIGNED → NEW
-> me
Assignee: hyatt → bryner
Comment on attachment 123334 [details] [diff] [review]
proposed fix

(i fixed the indenting in my tree, fwiw)
Attachment #123334 - Flags: superreview?(dbaron)
Attachment #123334 - Flags: review+
Attachment #123334 - Flags: approval1.4?
Attachment #123334 - Flags: superreview?(dbaron) → superreview+
Brian, do you want to check this in, or should I? The indentation is correct in
my tree as well but a -uw diff doesn't show that, I guess.
Comment on attachment 123334 [details] [diff] [review]
proposed fix

a=sspitzer
Attachment #123334 - Flags: approval1.4? → approval1.4+
checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
As bug fixed and checked in, I'm clearing blocking1.4 request.
Flags: blocking1.4?
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
Crash Signature: [@nsMenuPopupFrame::Notify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: