Fix crash mousing around menus (bug 205728). Patch by bienvenu, r=me, sr=dbaron, a=sspitzer.